# eBPF-Discovery

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  conanfile.txt
.circleci/: config.yml
.github/actions/: action.yaml
.github/actions/build-and-test/: action.yaml
.github/actions/build-docker-image/: action.yaml
.github/actions/build-test-and-publish-release/: action.yaml
.github/actions/component-tests/: action.yaml
.github/actions/configure/: action.yaml
.github/actions/create-timestamp/: action.yaml
.github/actions/install-requirements/: action.yaml
.github/actions/load-tests/: action.yaml
.github/actions/run-component-tests/: action.yaml
.github/actions/run-cppcheck/: action.yaml
.github/actions/run-load-tests/: action.yaml
.github/actions/run-unit-tests/: action.yaml
.github/actions/set-environment-variables/: action.yaml
.github/actions/test/: action.yaml
.github/actions/unit-tests/: action.yaml
.github/actions/update-packages/: action.yaml
.github/workflows/: biweekly-build-test-and-publish-release.yaml  build-and-load-test-debug.yaml  build-and-load-test-debug.yaml.disabled  build-and-test-debug-on-push.yaml  build-and-test-debug.yaml  build-and-test-release-on-merge.yaml  build-and-test-release.yaml  build-and-test.yaml  build-test-and-publish-release.yaml  build-test-and-publish-release.yaml.disabled  cppcheck.yaml  main-push-build-test-and-publish-release.yaml  master-push-build-test-and-publish-release.yaml
dev-dockerfile/: Dockerfile
ebpfdiscoverysrv/: CMakeLists.txt
ebpfdiscoverysrv/src/: main.cpp
ebpfdiscoverysrv/test/: dependencies.sh
libbpfload/: CMakeLists.txt
libbpfload/headers/bpfload/: btf_helpers.h
libebpfdiscovery/: CMakeLists.txt
libebpfdiscovery/headers/ebpfdiscovery/: AsyncTask.h  BpfOptions.h  Config.h  Discovery.h  DiscoveryBpf.h  DiscoveryBpfLoader.h  DiscoveryBpfLogHandler.h  DiscoveryBpfLogging.h  IpAddressChecker.h  IpUtils.h  Json.h  LRUCache.h  LibBpfInterface.h  Log.h  NetlinkCalls.h  ServiceDetectionTask.h  Session.h  Slp.h  SlpBpf.h  SlpDetectionTask.h
libebpfdiscovery/src/: AsyncTask.cpp  BpfOptions.cpp  Config.cpp  Discovery.cpp  DiscoveryBpf.cpp  DiscoveryBpfLoader.cpp  DiscoveryBpfLogHandler.cpp  DiscoveryBpfLogging.cpp  IpAddressChecker.cpp  IpUtils.cpp  Log.cpp  NetlinkCalls.cpp  ServiceDetectionTask.cpp  Session.cpp  Slp.cpp  SlpBpf.cpp  SlpDetectionTask.cpp  StringFunctions.cpp  StringFunctions.h
libebpfdiscovery/test/: IpAddressCheckerTest.cpp  IpUtilsTest.cpp  JsonTest.cpp  LRUCacheTest.cpp  LibBpInterfaceMock.h  SlpBpfTest.cpp  SlpTest.cpp  StringFunctionsTest.cpp
libebpfdiscoveryproto/: CMakeLists.txt
libebpfdiscoveryproto/ebpfdiscoveryproto/: service.proto
libebpfdiscoveryproto/headers/ebpfdiscoveryproto/: Translator.h
libebpfdiscoveryproto/proto/: dummy.proto
libebpfdiscoveryproto/proto/ebpfdiscoveryproto/: example.proto
libebpfdiscoveryproto/src/: Translator.cpp
libebpfdiscoveryproto/test/: TranslatorTest.cpp
libebpfdiscoveryshared/: CMakeLists.txt
libebpfdiscoveryshared/headers/ebpfdiscoveryshared/: Constants.h  SlpTypes.h  SysPrefixMacro.h  Types.h
libebpfdiscoveryskel/: CMakeLists.txt
libebpfdiscoveryskel/bpftest/: DataFunctionsTest.cpp  discoveryTest.bpf.c  discoveryTest.h
libebpfdiscoveryskel/cmake/: FindBpfObject.cmake
libebpfdiscoveryskel/src/: Config.h  DataFunctions.h  DataReading.h  DebugPrint.h  GlobalData.h  Handlers.h  LibSSLProbes.h  LibSSLTypes.h  Log.h  Pid.h  ProcessTracing.h  SysPrefixMacro.h  SysTypes.h  SyscallProbes.h  TrackedSession.h  discovery.bpf.c  slp.bpf.c
libebpfdiscoveryskel/test/: DataFunctionsTest.cpp  DiscoveryTest.h  DiscoveryTestConstants.h  SlpTest.cpp
libebpfdiscoveryskel/testbpf/: DataFunctionsTest.h  SlpTestHooks.h  TestDefine.h  discoveryTest.bpf.c
libebpfdiscoveryskel/tools/: generate-vmlinux-h.sh
libhttpparser/: CMakeLists.txt
libhttpparser/headers/httpparser/: HttpRequestParser.h
libhttpparser/src/: HttpRequestParser.cpp  XForwardedForValueParser.cpp
libhttpparser/test/: HttpRequestParserTest.cpp
liblogging/: CMakeLists.txt
liblogging/headers/logging/: Global.h  Logger.h
liblogging/src/: Formatting.cpp  Formatting.h  Global.cpp  Logger.cpp
liblogging/test/: FormattingTest.cpp
libservice/: CMakeLists.txt
libservice/headers/service/: Aggregator.h  InterfacesReader.h  IpAddress.h  IpAddressChecker.h  IpAddressCheckerImpl.h  IpAddressNetlinkChecker.h  NetlinkCalls.h  Service.h
libservice/src/: Aggregator.cpp  InterfacesReader.cpp  IpAddress.cpp  IpAddressChecker.cpp  IpAddressCheckerImpl.cpp  IpAddressNetlinkChecker.cpp  NetlinkCalls.cpp  NetlinkSocket.cpp  NetlinkSocket.h
libservice/test/: AggregatorTest.cpp  HttpRequestParserTest.cpp  InterfacesReaderMock.h  IpAddressCheckerTest.cpp  IpAddressNetlinkCheckerMock.h  IpAddressTest.cpp  NetlinkCallsMock.h
test/: conftest.py  requirements.txt  test_discovery.py  utils.py
test/component/: conftest.py  https_server.pem  https_server.py  pytest.ini  requirements.txt  test_discovery.py  utils.py
test/load/: http_server.py  locustfile.py  requirements.txt  test_load.py  test_load.sh
testing/: conftest.py  requirements.txt  test_discovery.py  utils.py
testing/tests/: docker-compose.yml
